syntax = "proto3";
option go_package = ".;pb";

service OSS {
  rpc Upload(UploadReq) returns (UploadResp);
  rpc Download(DownloadReq) returns (DownloadResp);
}

// message ChunkedUploadReq {}

message UploadReq {
  string object_name = 1;
  bytes content = 2;
}

message UploadResp { string get_url = 1; }

message DownloadReq {
  string bucket_name = 1;
  string region = 2;
  string object_name = 3;
}

message DownloadResp { bytes content = 1; }